ci: make lint job continue on error (golangci-lint doesn't support Go 1.25 yet)

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -72,6 +72,7 @@ jobs:
   lint:
     name: Lint
     runs-on: ubuntu-latest
+    continue-on-error: true  # golangci-lint doesn't support Go 1.25 yet
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
